--- a/templates/product/form.html.twig
+++ b/templates/product/form.html.twig
@@ -20,6 +20,7 @@
     {{ form_row(formProduct.reference) }}
     {{ form_row(formProduct.code) }}
     {{ form_row(formProduct.provider) }}
+    {{ form_row(formProduct.imageFile) }}
 
     <button type="submit" class="btn btn-primary">
         {% if editMode %}
