Add imagefile to profile

--- a/templates/profile/show.html.twig
+++ b/templates/profile/show.html.twig
@@ -7,6 +7,9 @@
         {{ profile.lastname  ?? 'null' }}
         {{ profile.user.username ?? 'null'  }}
         {{ profile.user.email  ?? 'null' }}
+        {% if profile.filename %}
+            <img src="{{ vich_uploader_asset(profile, 'imageFile') | imagine_filter('my_thumb') }}" alt="{{ profile.filename }}" >
+        {% endif %}
 
     </section>
 {% endblock %}
