--- a/templates/customer/index.html.twig
+++ b/templates/customer/index.html.twig
@@ -3,18 +3,10 @@
 {% block title %}Hello CustomerController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Applications/MAMP/htdocs/erp_project/src/Controller/CustomerController.php'|file_link(0) }}">src/Controller/CustomerController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Applications/MAMP/htdocs/erp_project/templates/customer/registration.html.twig'|file_link(0) }}">templates/customer/index.html.twig</a></code></li>
-    </ul>
+<div class="container">
+    {% for customer in customers %}
+        {{ customer.name }}
+    {% endfor %}
 </div>
 {% endblock %}
