add Webpack Encore & jQuery CDN

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -17,4 +17,7 @@
         <li>Your template at <code><a href="{{ '/Applications/MAMP/htdocs/erp_project/templates/default/index.html.twig'|file_link(0) }}">templates/default/registration.html.twig</a></code></li>
     </ul>
 </div>
+
+
+    {% block javascripts %}{% endblock %}
 {% endblock %}
