--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,11 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <!-- afin de pouvoir lire les fichier css de webpack -->
+        {{ encore_entry_link_tags('app') }}
         <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <!-- afin de pouvoir lire les fichier css de webpack -->
+        {{ encore_entry_script_tags('app') }}
+        <script type="text/javascript" src="{{ asset('build/app.js')}}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
