--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,25 +1,80 @@
-{% extends 'base.html.twig' %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>{% block title %}Connexion{% endblock %}</title>
 
-{% block body %}
-    <section class="container">
+        <!-- afin de pouvoir lire les fichier css de webpack -->
+        {{ encore_entry_link_tags('app') }}
 
-        <h1>Connexion</h1>
+        <!-- Bootstrap CSS-->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-        {% if error %}
-            {{ error.messageKey }}
-        {% endif %}
+    </head>
 
-        <form action="{{ path('security_login') }}" method="post">
-            <div class="form-group">
-                <input type="text" class="form-control" name="_username" value="{{ lastUsername }}" placeholder="Email..." required>
+    <body class="animsition">
+        <div class="page-wrapper">
+            <div class="page-content--bge5">
+                <div class="container">
+                    <div class="login-wrap">
+                        <div class="login-content">
+                            <div class="login-logo">
+                                <a href="#">
+                                    <img src="images/icon/logo.png" alt="CoolAdmin">
+                                </a>
+                            </div>
+
+                            {% if error %}
+                                {{ error.messageKey }}
+                            {% endif %}
+
+                            <div class="login-form">
+                                <form action="" method="post">
+                                    <div class="form-group">
+                                        <label>Email Address</label>
+                                        <input class="au-input au-input--full" type="email" name="_username" value="{{ lastUsername }}" placeholder="Email..." required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Password</label>
+                                        <input class="au-input au-input--full" type="password" name="_password" placeholder="Password..." required>
+                                    </div>
+                                    <div class="login-checkbox">
+                                        <label>
+                                            <input type="checkbox" name="remember">Remember Me
+                                        </label>
+                                        <label>
+                                            <a href="#">Forgotten Password?</a>
+                                        </label>
+                                    </div>
+                                    <button type="submit" class="au-btn au-btn--block au-btn--green m-b-20">sign in</button>
+                                    <div class="social-login-content">
+                                        <div class="social-button">
+                                            <button class="au-btn au-btn--block au-btn--blue m-b-20">sign in with facebook</button>
+                                            <button class="au-btn au-btn--block au-btn--blue2">sign in with twitter</button>
+                                        </div>
+                                    </div>
+                                </form>
+                                <div class="register-link">
+                                    <p>
+                                        Don't you have account?
+                                        <a href="#">Sign Up Here</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <input type="password" class="form-control" name="_password" placeholder="Mot de passe..." required>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-success">Connexion</button>
-            </div>
-        </form>
+        </div>
 
-    </section>
-{% endblock %}
+
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+        <!-- afin de pouvoir lire les fichier css de webpack -->
+        {{ encore_entry_script_tags('app') }}
+
+        <script type="text/javascript" src="{{ asset('build/app.js')}}"></script>
+        <script type="text/javascript" src="{{ asset('build/main.js')}}"></script>
+    </body>
+</html>
