--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,10 @@
         <!-- Bootstrap CSS-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+        <link rel="stylesheet" href="{{ asset('build/theme.css') }}">
+        <link rel="stylesheet" href="{{ asset('build/font-face.css') }}">
+
+
         {% block stylesheets %}{% endblock %}
     </head>
     <body class="animsition">
@@ -21,7 +25,7 @@
                     <div class="container-fluid">
                         <div class="header-mobile-inner">
                             <a class="logo" href="index.html">
-                                <img src="images/icon/logo.png" alt="CoolAdmin" />
+                                <img src="{{ asset('build/images/logoERP.png') }}" alt="MyERP" />
                             </a>
                             <button class="hamburger hamburger--slider" type="button">
                             <span class="hamburger-box">
@@ -136,7 +140,7 @@
             <aside class="menu-sidebar d-none d-lg-block">
                 <div class="logo">
                     <a href="#">
-                        <img src="" alt="Cool Admin" />
+                        <img src="{{ asset('build/images/logoERPcouleur.png') }}" alt="MyERP" />
                     </a>
                 </div>
                 <div class="menu-sidebar__content js-scrollbar1">
@@ -267,7 +271,7 @@
                                             </div>
                                             <div class="mess__item">
                                                 <div class="image img-cir img-40">
-                                                    <img src="images/icon/avatar-06.jpg" alt="Michelle Moreno" />
+                                                    <img src="{{ asset('build/images/profile_default.png') }}" alt="Michelle Moreno" />
                                                 </div>
                                                 <div class="content">
                                                     <h6>Michelle Moreno</h6>
@@ -372,7 +376,7 @@
                                 <div class="account-wrap">
                                     <div class="account-item clearfix js-item-menu">
                                         <div class="image">
-                                            <img src="images/icon/avatar-01.jpg" alt="John Doe" />
+                                            <img src="{{ asset('build/images/profile_default.png') }}" alt="John Doe" />
                                         </div>
                                         <div class="content">
                                             <a class="js-acc-btn" href="#">john doe</a>
@@ -381,7 +385,7 @@
                                             <div class="info clearfix">
                                                 <div class="image">
                                                     <a href="#">
-                                                        <img src="images/icon/avatar-01.jpg" alt="John Doe" />
+                                                        <img src="{{ asset('build/images/profile_default.png') }}" alt="John Doe" />
                                                     </a>
                                                 </div>
                                                 <div class="content">
