--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -7,6 +7,9 @@
         <!-- afin de pouvoir lire les fichier css de webpack -->
         {{ encore_entry_link_tags('app') }}
 
+        <link rel="stylesheet" href="{{ asset('build/theme.css') }}">
+        <link rel="stylesheet" href="{{ asset('build/font-face.css') }}">
+
         <!-- Bootstrap CSS-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
