--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -22,8 +22,8 @@
                 <div class="login-wrap">
                     <div class="login-content">
                         <div class="login-logo">
-                            <a href="#">
-                                <img src="images/icon/logo.png" alt="CoolAdmin">
+                            <a href="{{ path('index_default') }}">
+                                <img src="{{ asset('build/images/logoERPcouleur.png') }}" alt="MyERP">
                             </a>
                         </div>
                         <div class="login-form">
