--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,20 @@
                 {% include 'header.html.twig' %}
 
                 <!-- MAIN CONTENT PAGE -->
+                <div class="main-content">
+                    {% for message in app.flashes('success') %}
+                        <div class="m-l-30 m-r-30 sufee-alert alert with-close alert-success alert-dismissible fade show">
+                            <span class="badge badge-pill badge-success">Success</span>
+                            {{ message }}
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    {% endfor %}
+
                 {% block body %}{% endblock %}
+
+                </div>
 
             <!-- END PAGE CONTAINER -->
             </div>
