--- a/templates/product/form.html.twig
+++ b/templates/product/form.html.twig
@@ -5,110 +5,101 @@
 {% endblock %}
 
 {% block body %}
-    <div class="main-content">
-        <div class="section__content section__content--p30">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="overview-wrap">
-                            <h2 class="title-1">Product</h2>
+    <div class="section__content section__content--p30">
+        <div class="container-fluid">
+            <div class="row m-t-25">
+                <div class="col-lg-10">
+                    <div class="card">
+                        <div class="card-header">
+                            {% if editMode %}
+                                <strong>Edit</strong> Product
+                            {% else %}
+                                <strong>New</strong> Product
+                            {% endif %}
                         </div>
-                    </div>
-                </div>
-                <div class="row m-t-25">
-                    <div class="col-lg-10">
-                        <div class="card">
-                            <div class="card-header">
-                                {% if editMode %}
-                                    <strong>Edit Form</strong> Product
-                                {% else %}
-                                    <strong>New Form</strong> Product
-                                {% endif %}
+                        <div class="card-body card-block">
+                            {{ form_start(formProduct, {'attr': {'class': 'form-horizontal'}}) }}
+                                <div class="row form-group">
+                                    <div class="col col-md-3">
+                                        <label class=" form-control-label">User</label>
+                                    </div>
+                                    <div class="col-12 col-md-9">
+                                        <p class="form-control-static">{{ form_widget(formProduct.createdBy, {'id' : 'disabledSelect', 'attr' : {'class': 'form-control', 'disabled': ''}}) }}</p>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col col-md-3">
+                                        {{ form_label(formProduct.reference)}}
+                                    </div>
+                                    <div class="col-12 col-md-9">
+                                        {{ form_widget(formProduct.reference, {'attr': {'class': 'form-control', 'placeholder': 'FR1234567890'}}) }}
+                                        <small class="form-text text-muted">Reference of product</small>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col col-md-3">
+                                        {{ form_label(formProduct.type) }}
+                                    </div>
+                                    <div class="col-12 col-md-9">
+                                        {{ form_widget(formProduct.type, {'id' : 'select', 'attr' : {'class': 'form-control'}}) }}
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col col-md-3">
+                                        {{ form_label(formProduct.name)}}
+                                    </div>
+                                    <div class="col-12 col-md-9">
+                                        {{ form_widget(formProduct.name, {'attr': {'class': 'form-control', 'placeholder': 'Name ...'}}) }}
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col col-md-3">
+                                        {{ form_label(formProduct.description)}}
+                                    </div>
+                                    <div class="col-12 col-md-9">
+                                        {{ form_widget(formProduct.description, {'attr': {'class': 'form-control', 'placeholder': 'Content ...', 'rows': '9'}}) }}
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col col-md-3">
+                                        {{ form_label(formProduct.provider)}}
+                                    </div>
+                                    <div class="col-12 col-md-9">
+                                        {{ form_widget(formProduct.provider, {'attr': {'class': 'form-control', 'placeholder': 'Provider ...'}}) }}
+                                        <small class="form-text text-muted">Company of providence</small>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col col-md-3">
+                                        {{ form_label(formProduct.imageFile)}}
+                                    </div>
+                                    <div class="col-12 col-md-9">
+                                        {{ form_widget(formProduct.imageFile, {'attr': {'class': 'form-control-file'}}) }}
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col col-md-3">
+                                        {{ form_label(formProduct.stock)}}
+                                    </div>
+                                    <div class="col-12 col-md-4">
+                                        {{ form_widget(formProduct.stock, {'attr': {'class': 'form-control'}}) }}
+                                    </div>
+                                </div>
                             </div>
-                            <div class="card-body card-block">
-                                {{ form_start(formProduct, {'attr': {'class': 'form-horizontal'}}) }}
-                                    <div class="row form-group">
-                                        <div class="col col-md-3">
-                                            <label class=" form-control-label">User</label>
-                                        </div>
-                                        <div class="col-12 col-md-9">
-                                            <p class="form-control-static">{{ form_widget(formProduct.createdBy, {'id' : 'disabledSelect', 'attr' : {'class': 'form-control', 'disabled': ''}}) }}</p>
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col col-md-3">
-                                            {{ form_label(formProduct.reference)}}
-                                        </div>
-                                        <div class="col-12 col-md-9">
-                                            {{ form_widget(formProduct.reference, {'attr': {'class': 'form-control', 'placeholder': 'FR1234567890'}}) }}
-                                            <small class="form-text text-muted">Reference of product</small>
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col col-md-3">
-                                            {{ form_label(formProduct.type) }}
-                                        </div>
-                                        <div class="col-12 col-md-9">
-                                            {{ form_widget(formProduct.type, {'id' : 'select', 'attr' : {'class': 'form-control'}}) }}
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col col-md-3">
-                                            {{ form_label(formProduct.name)}}
-                                        </div>
-                                        <div class="col-12 col-md-9">
-                                            {{ form_widget(formProduct.name, {'attr': {'class': 'form-control', 'placeholder': 'Name ...'}}) }}
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col col-md-3">
-                                            {{ form_label(formProduct.description)}}
-                                        </div>
-                                        <div class="col-12 col-md-9">
-                                            {{ form_widget(formProduct.description, {'attr': {'class': 'form-control', 'placeholder': 'Content ...', 'rows': '9'}}) }}
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col col-md-3">
-                                            {{ form_label(formProduct.provider)}}
-                                        </div>
-                                        <div class="col-12 col-md-9">
-                                            {{ form_widget(formProduct.provider, {'attr': {'class': 'form-control', 'placeholder': 'Provider ...'}}) }}
-                                            <small class="form-text text-muted">Company of providence</small>
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col col-md-3">
-                                            {{ form_label(formProduct.imageFile)}}
-                                        </div>
-                                        <div class="col-12 col-md-9">
-                                            {{ form_widget(formProduct.imageFile, {'attr': {'class': 'form-control-file'}}) }}
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <div class="col col-md-3">
-                                            {{ form_label(formProduct.stock)}}
-                                        </div>
-                                        <div class="col-12 col-md-4">
-                                            {{ form_widget(formProduct.stock, {'attr': {'class': 'form-control'}}) }}
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card-footer">
-                                    <button type="submit" class="btn btn-primary btn-sm">
-                                        <i class="fa fa-dot-circle-o"></i> Submit
-                                    </button>
-                                    <button type="reset" class="btn btn-danger btn-sm">
-                                        <i class="fa fa-ban"></i> Reset
-                                    </button>
-                                </div>
-                            {{ form_end(formProduct) }}
-                        </div>
+                            <div class="card-footer">
+                                <button type="submit" class="btn btn-primary btn-sm">
+                                    <i class="fa fa-dot-circle-o"></i> Submit
+                                </button>
+                                <button type="reset" class="btn btn-danger btn-sm">
+                                    <i class="fa fa-ban"></i> Reset
+                                </button>
+                            </div>
+                        {{ form_end(formProduct) }}
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
+
 
 {% endblock %}
