--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -3,15 +3,70 @@
 {% block title %}{% endblock %}
 
 {% block body %}
+    <div class="section__content section__content--p30">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-header">
+                            <strong class="card-title">Product sheet</strong>
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <section class="card">
+                                        {% if product.filename %}
+                                            <img src="{{ vich_uploader_asset(product, 'imageFile') | imagine_filter('product_thumb') }}" alt="{{ product.filename }}" >
+                                        {% else %}
+                                            <img src="{{ asset('build/images/product_default.png') | imagine_filter('product_thumb') }}" alt="{{ product.filename }}" >
+                                        {% endif %}
+                                    </section>
+                                </div>
+                                <div class="col-lg-8 ">
+                                    <div class="typo-headers">
+                                        <h3 class="pb-2 display-5">{{ product.name }}</h3>
+                                    </div>
+                                    <div class="blockquote-footer">Type</div>
+                                    <div class="card">
+                                        <div class="card-body text-secondary">
+                                            <div class="typo-articles">
+                                                <p>{{ product.type }}</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="blockquote-footer">Description</div>
+                                    <div class="card">
+                                        <div class="card-body text-secondary">
+                                            <div class="typo-articles">
+                                                <p>{{ product.description }}</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="blockquote-footer">Stock</div>
+                                    <div class="card">
+                                        <div class="card-body text-secondary">
+                                            <div class="typo-articles">
+                                                <p>{{ product.stock }}</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="blockquote-footer">Price</div>
+                                    <div class="card">
+                                        <div class="card-body text-secondary">
+                                            <div class="typo-articles">
+                                                {{ product.price ?? "not defined"}}
+                                                <span class="float-right"><i class="fas fa-eur"></i></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="text-center"><a href="{{ path('product_edit', {'id': product.id}) }}" class="btn btn-link"><i class="fas fa-pencil-square-o"></i> Edit product</a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-<div class="example-wrapper">
-    <h1>{{ product.name }}</h1>
-    <p>{{ product.type }}</p>
-    <p>{{ product.description }}</p>
-    <p>{{ product.stock }}</p>
-    
-    {% if product.filename %}
-        <img src="{{ vich_uploader_asset(product, 'imageFile') | imagine_filter('my_thumb') }}" alt="{{ product.filename }}" >
-    {% endif %}
-</div>
 {% endblock %}
