--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,8 +10,9 @@
         <!-- Bootstrap CSS-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-        <link rel="stylesheet" href="{{ asset('build/theme.css') }}">
+        <link rel="stylesheet" href="{{ asset('build/vendor.css') }}">
         <link rel="stylesheet" href="{{ asset('build/font-face.css') }}">
+        <link rel="stylesheet" href="{{ asset('build/theme.css') }}">
 
 
         {% block stylesheets %}{% endblock %}
@@ -57,8 +58,9 @@
         <!-- afin de pouvoir lire les fichier css de webpack -->
         {{ encore_entry_script_tags('app') }}
 
-        <script type="text/javascript" src="{{ asset('build/app.js')}}"></script>
+        <script type="text/javascript" src="{{ asset('build/vendor.js')}}"></script>
         <script type="text/javascript" src="{{ asset('build/main.js')}}"></script>
+        <script type="text/javascript" src="{{ asset('build/app.js')}}"></script>
 
         {% block javascripts %}{% endblock %}
     </body>
