--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -32,14 +32,14 @@
                             </div>
                         </div>
                         <div class="table-responsive table-data">
-                            <table class="table">
+                            <table id="table-data" class="table">
                                 <thead>
                                     <tr>
                                         <td>name</td>
                                         <td>role</td>
                                         <td>type</td>
                                         <td>active</td>
-                                        <td>switch to</td>
+                                        <td></td>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -64,28 +64,37 @@
                                                 <div class="table-data__info">
                                                     <h6>
                                                         {% if user.roles[0] == "ROLE_ADMIN" %}
-                                                            administration
+                                                            administrator
                                                         {% elseif user.roles[0] == "ROLE_SUPER_ADMIN" %}
                                                             Full Control
                                                         {% else  %}
-                                                            Edition
+                                                            Editior
                                                         {% endif %}
                                                     </h6>
                                                 </div>
                                             </td>
                                             <td>
                                                 <label class="switch switch-3d switch-success mr-3">
-                                                    <input type="checkbox" value="{{ path('user_active', {'id': user.id}) }}" class="switch-input" {% if user.isValid == true %}checked="true"{% endif %} {% if not (is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN'))  %}disabled=""{% endif %}>
+                                                    <input type="checkbox" value="{{ path('user_active', {'id': user.id}) }}" class="switch-input" {% if user.isValid == true %}checked="true"{% endif %} {% if not (is_granted('ROLE_ADMIN')) or app.user == user %}disabled=""{% endif %}>
                                                     <span class="switch-label"></span>
                                                     <span class="switch-handle"></span>
                                                 </label>
                                             </td>
                                             <td>
-                                                {% if is_granted('ROLE_SUPER_ADMIN') and user != app.user %}
-                                                    <a href="{{ path('index_default', {'_switch_user': user.email}) }}"><span class="more"><i class="zmdi zmdi-sign-in"></i></span></a>
-                                                {% else %}
-                                                    <div class="table-data__info"><span><a href="#">not allowed</a></span></div>
-                                                {% endif %}
+                                                <div class="table-data-feature">
+                                                    {% if not is_granted('ROLE_PREVIOUS_ADMIN') and is_granted('ROLE_SUPER_ADMIN') and user != app.user %}
+                                                        <a href="{{ path('index_default', {'_switch_user': user.email}) }}" class="item" data-toggle="tooltip" data-placement="top" title="switch to user">
+                                                            <i class="zmdi zmdi-sign-in"></i>
+                                                        </a>
+                                                    {% endif %}
+                                                    {% if is_granted('ROLE_ADMIN') and user != app.user %}
+                                                        <div class="roleEdit" data-toggle="tooltip" data-placement="top" title="edit role">
+                                                            <button type="button" class="item" data-url="{{ path('user_role') }}" data-id="{{ user.id }}" data-toggle="modal" data-target="#roleModal">
+                                                                <i class="zmdi zmdi-edit"></i>
+                                                            </button>
+                                                        </div>
+                                                    {% endif %}
+                                                </div>
                                             </td>
                                         </tr>
                                     {% endfor %}
@@ -103,3 +112,38 @@
     </div>
 {% endblock %}
 
+{% block modals %}
+    <!-- modal static -->
+    <div class="modal fade" id="roleModal" tabindex="-1" role="dialog" aria-labelledby="staticModalLabel" aria-hidden="true" data-backdrop="static">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticModalLabel">Edit user</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="row form-group">
+                        <div class="col col-md-3">
+                            <label for="selectSm" class=" form-control-label">Role</label>
+                        </div>
+                        <div class="col-12 col-md-9">
+                            <select name="selectSm" id="SelectLm" class="form-control-sm form-control">
+                                <option value="" disabled selected>Please select</option>
+                                <option value="1">Full Control</option>
+                                <option value="2">Administrator</option>
+                                <option value="3">Editor</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="roleSubmit btn btn-primary btn-sm">Confirm</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end modal static -->
+{% endblock %}
