--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5,3 +5,13 @@
 .logo img{
     max-width: 50%;
 }
+
+.login-logo img{
+    width: 180px;
+    height: 85px;
+}
+
+.form-error{
+    color: red;
+    font-size: 12px;
+}
