--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -125,7 +125,11 @@
                     <div class="account-wrap">
                         <div class="account-item clearfix js-item-menu">
                             <div class="image">
-                                <img src="{{ asset('build/images/profile_default.png') }}" alt="{{ app.user.username }}" />
+                                {% if app.user.profile.filename and app.user.profile.filename is defined %}
+                                    <img src="{{ vich_uploader_asset(app.user.profile, 'imageFile') | imagine_filter('profile_thumb') }}" alt="{{ app.user.profile.filename }}" >
+                                {% else %}
+                                    <img src="{{ asset('build/images/profile_default.png') }}" alt="{{ app.user.username }}" />
+                                {% endif %}
                             </div>
                             <div class="content">
                                 <a class="js-acc-btn" href="#">{{ app.user.username }}</a>
@@ -134,7 +138,11 @@
                                 <div class="info clearfix">
                                     <div class="image">
                                         <a href="#">
-                                            <img src="{{ asset('build/images/profile_default.png') }}" alt="{{ app.user.username }}" />
+                                            {% if app.user.profile.filename and app.user.profile.filename is defined %}
+                                                <img src="{{ vich_uploader_asset(app.user.profile, 'imageFile') | imagine_filter('profile_thumb') }}" alt="{{ app.user.profile.filename }}" >
+                                            {% else %}
+                                                <img src="{{ asset('build/images/profile_default.png') }}" alt="{{ app.user.username }}" />
+                                            {% endif %}
                                         </a>
                                     </div>
                                     <div class="content">
