--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,83 +1,48 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Connexion{% endblock %}</title>
+{% extends 'form.html.twig' %}
 
-        <!-- afin de pouvoir lire les fichier css de webpack -->
-        {{ encore_entry_link_tags('app') }}
+{% block title%}Login{% endblock %}
 
-        <link rel="stylesheet" href="{{ asset('build/theme.css') }}">
-        <link rel="stylesheet" href="{{ asset('build/font-face.css') }}">
+{% block form %}
 
-        <!-- Bootstrap CSS-->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    </head>
-
-    <body class="animsition">
-        <div class="page-wrapper">
-            <div class="page-content--bge5">
-                <div class="container">
-                    <div class="login-wrap">
-                        <div class="login-content">
-                            <div class="login-logo">
-                                <a href="{{ path('index_default') }}">
-                                    <img src="{{ asset('build/images/logoERPcouleur.png') }}" alt="MyERP">
-                                </a>
-                            </div>
-
-                            {% if error %}
-                                {{ error.messageKey }}
-                            {% endif %}
-
-                            <div class="login-form">
-                                <form action="" method="post">
-                                    <div class="form-group">
-                                        <label>Email Address</label>
-                                        <input class="au-input au-input--full" type="email" name="_username" value="{{ lastUsername }}" placeholder="Email..." required>
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Password</label>
-                                        <input class="au-input au-input--full" type="password" name="_password" placeholder="Password..." required>
-                                    </div>
-                                    <div class="login-checkbox">
-                                        <label>
-                                            <input type="checkbox" name="remember">Remember Me
-                                        </label>
-                                        <label>
-                                            <a href="#">Forgotten Password?</a>
-                                        </label>
-                                    </div>
-                                    <button type="submit" class="au-btn au-btn--block au-btn--green m-b-20">sign in</button>
-                                    <div class="social-login-content">
-                                        <div class="social-button">
-                                            <button class="au-btn au-btn--block au-btn--blue m-b-20">sign in with facebook</button>
-                                            <button class="au-btn au-btn--block au-btn--blue2">sign in with twitter</button>
-                                        </div>
-                                    </div>
-                                </form>
-                                <div class="register-link">
-                                    <p>
-                                        Don't you have account?
-                                        <a href="{{ path('security_registration') }}">Sign Up Here</a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    {% if error %}
+        <div class="alert alert-danger" role="alert">
+            {{ error.messageKey }}
         </div>
 
+    {% endif %}
 
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <div class="login-form">
+        <form action="" method="post">
+            <div class="form-group">
+                <label>Email Address</label>
+                <input class="au-input au-input--full" type="email" name="_username" value="{{ lastUsername }}" placeholder="Email..." required>
+            </div>
+            <div class="form-group">
+                <label>Password</label>
+                <input class="au-input au-input--full" type="password" name="_password" placeholder="Password..." required>
+            </div>
+            <div class="login-checkbox">
+                <label>
+                    <input type="checkbox" name="remember">Remember Me
+                </label>
+                <label>
+                    <a href="{{ path('security_forgotten_password') }}">Forgotten Password?</a>
+                </label>
+            </div>
+            <button type="submit" class="au-btn au-btn--block au-btn--green m-b-20">sign in</button>
+            <div class="social-login-content">
+                <div class="social-button">
+                    <button class="au-btn au-btn--block au-btn--blue m-b-20">sign in with facebook</button>
+                    <button class="au-btn au-btn--block au-btn--blue2">sign in with twitter</button>
+                </div>
+            </div>
+        </form>
+        <div class="register-link">
+            <p>
+                Don't you have account?
+                <a href="{{ path('security_registration') }}">Sign Up Here</a>
+            </p>
+        </div>
+    </div>
 
-        <!-- afin de pouvoir lire les fichier css de webpack -->
-        {{ encore_entry_script_tags('app') }}
-
-        <script type="text/javascript" src="{{ asset('build/app.js')}}"></script>
-        <script type="text/javascript" src="{{ asset('build/main.js')}}"></script>
-    </body>
-</html>
+{% endblock %}
