--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -1,103 +1,48 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Inscription{% endblock %}</title>
+{% extends 'form.html.twig' %}
 
-        <!-- afin de pouvoir lire les fichier css de webpack -->
-        {{ encore_entry_link_tags('app') }}
+{% block title%}Inscription{% endblock %}
 
-        <link rel="stylesheet" href="{{ asset('build/theme.css') }}">
-        <link rel="stylesheet" href="{{ asset('build/font-face.css') }}">
-
-        <!-- Bootstrap CSS-->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    </head>
-
-    <body class="animsition">
-    <div class="">
-        <div class="page-content--bge5">
-            <div class="container">
-                <div class="login-wrap">
-                    <div class="login-content">
-                        <div class="login-logo">
-                            <a href="{{ path('index_default') }}">
-                                <img src="{{ asset('build/images/logoERPcouleur.png') }}" alt="MyERP">
-                            </a>
-                        </div>
-                        <div class="login-form">
-                            {{ form_start(form) }}
-                                <div class="form-group">
-                                    {{ form_row(form.username, {'attr': {'class': 'au-input au-input--full', 'placeholder': 'Username'}}) }}
-                                </div>
-                                <div class="form-group">
-                                    {{ form_row(form.email, {'attr': {'class': 'au-input au-input--full', 'placeholder': 'Email'}}) }}
-                                </div>
-                                <div class="form-group">
-                                    {{ form_row(form.password, {'attr': {'class': 'au-input au-input--full', 'placeholder': 'Password'}}) }}
-                                </div>
-                                <div class="form-group">
-                                    {{ form_row(form.confirmPassword, {'attr': {'class': 'au-input au-input--full', 'placeholder': 'Password'}}) }}
-                                </div>
-                                <div class="login-checkbox">
-                                    <label>
-                                        <input type="checkbox" name="aggree">Agree the terms and policy
-                                    </label>
-                                </div>
-                                <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">register</button>
-                                <div class="social-login-content">
-                                    <div class="social-button">
-                                        <button class="au-btn au-btn--block au-btn--blue m-b-20">register with facebook</button>
-                                    </div>
-                                </div>
-
-                            {{ form_end(form) }}
-                            <div class="register-link">
-                                <p>
-                                    Already have account?
-                                    <a href="{{ path('security_login') }}">Sign In</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+{% block form %}
+    <div class="login-form">
+        {{ form_start(form) }}
+            <div class="form-group">
+                <div class="form-error">{{ form_errors(form.username) }}</div>
+                {{ form_label(form.username) }}
+                {{ form_widget(form.username, {'attr': {'class': 'au-input au-input--full', 'placeholder': 'Username'}}) }}
+            </div>
+            <div class="form-group">
+                <div class="form-error">{{ form_errors(form.email) }}</div>
+                {{ form_label(form.email) }}
+                {{ form_widget(form.email, {'attr': {'class': 'au-input au-input--full', 'placeholder': 'Email'}}) }}
+            </div>
+            <div class="form-group">
+                <div class="form-error">{{ form_errors(form.password) }}</div>
+                {{ form_label(form.password) }}
+                {{ form_widget(form.password, {'attr': {'class': 'au-input au-input--full', 'placeholder': 'Password'}}) }}
+            </div>
+            <div class="form-group">
+                <div class="form-error">{{ form_errors(form.confirmPassword) }}</div>
+                {{ form_label(form.confirmPassword) }}
+                {{ form_widget(form.confirmPassword, {'attr': {'class': 'au-input au-input--full', 'placeholder': 'Password'}}) }}
+            </div>
+            <div class="login-checkbox">
+                <label>
+                    <input type="checkbox" name="aggree">Agree the terms and policy
+                </label>
+            </div>
+            <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">register</button>
+            <div class="social-login-content">
+                <div class="social-button">
+                    <button class="au-btn au-btn--block au-btn--blue m-b-20">register with facebook</button>
                 </div>
             </div>
+
+        {{ form_end(form) }}
+        <div class="register-link">
+            <p>
+                Already have account?
+                <a href="{{ path('security_login') }}">Sign In</a>
+            </p>
         </div>
     </div>
-
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-    <!-- afin de pouvoir lire les fichier css de webpack -->
-    {{ encore_entry_script_tags('app') }}
-
-    <script type="text/javascript" src="{{ asset('build/app.js')}}"></script>
-    <script type="text/javascript" src="{{ asset('build/main.js')}}"></script>
-    </body>
-</html>
-
-
-{#{% extends 'base.html.twig' %}
-
-{% block title %}Hello SecurityController!{% endblock %}
-
-{% block body %}
-
-<div class="container">
-    <h1>Inscription</h1>
-    {{ form_start(form) }}
-
-    {{ form_row(form.email) }}
-    {{ form_row(form.username) }}
-    {{ form_row(form.password) }}
-    {{ form_row(form.confirmPassword) }}
-
-    <button class="btn btn-primary">Inscription</button>
-
-    {{ form_end(form) }}
-
-
-</div>
-{% endblock %}#}
+{% endblock %}
